Added functionality for key handling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
       
     <title>Online Keyboard</title>  
     <link rel="stylesheet" type="text/css" href="style.css" />  
+    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </head>  
 <body>  
   
 <div id="keystroke">
-    Fil
+</div>
+<div id="description">
+</div>
+<div id="inputbox">
+    <textarea>
+    </textarea>
 </div>
 <div id="container">  
     <ul id="keyboard">  
